--- a/.github/workflows/update_stats.yml
+++ b/.github/workflows/update_stats.yml
@@ -38,7 +38,8 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           
-          git add images/*
+          git add images/
+          
           git add scripts/history.json
           
           if ! git diff --staged --quiet; then
