--- a/.github/workflows/update_stats.yml
+++ b/.github/workflows/update_stats.yml
@@ -13,39 +13,38 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-      
+
       - name: Install dependencies
         run: pip install matplotlib numpy requests
-      
+
       - name: Generate Graphs
         run: |
           if [ ! -f scripts/history.json ]; then
             echo '{"dates": [], "scores": {}}' > scripts/history.json
           fi
           python scripts/generate_graph.py
-      
+
       - name: Commit and Push
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           
-          git add scripts/history.json
-          git add images/*.png
+          git add images/
           
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
+          git add scripts/history.json
+          
+          if ! git diff --staged --quiet; then
             git commit -m "Update progress graph and history [skip ci]"
             git push
+          else
+            echo "No changes to commit"
           fi
