--- a/.github/workflows/daily_challenge.yml
+++ b/.github/workflows/daily_challenge.yml
@@ -39,6 +39,8 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           
           git add README.md
+          git add scripts/used_leetcode.json
+          git add scripts/challenge_history.json
           
           if git diff --staged --quiet; then
             echo "No changes to commit"
